k8s/php-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-service
spec:
  selector:
    app: webapp
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
